--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form method="POST">
+        {% csrf_token %}
         <label for="username">Your name</label>
         <input id="username" name="username" type="text">
         <button type="submit">Send</button>
